2007-07-02 Sergii Stoian <soyan255@gmail.com>

	* Source/cairo/CairoGState.m
	  (-DPSshow:): Apply correct scale and translate transformation matrix.
	  (-DPSsetstrokeadjust:): Implement.
	  (-DPSinitgraphics): Set _strokeadjust to 1 by default.
	  (-_adjustPath:): Implement new method that place the path to pixel
	  boundaries.
	  (-_setPath:): Change method definition adding fillOrClip argument.
	  Use _adjustPath: method.
	  (-DPSclip): Change call of _setPath: to new format.
	  (-DPSeoclip): Ditto.
	  (-DPSeofill): Ditto.
	  (-DPSfill): Ditto.
	  (-DPSstroke): Ditto.
	  (-compositerect:op:): Ditto.
	* Headers/cairo/CairoGState.h: Define _strokeadjust variable.
	* Source/cairo/CairoFontInfo.m: (-widthOfString:): Add sanity check.

2007-06-29 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoSurface.h,
	* Source/cairo/CairoSurface.m (-setSize:): Add method.
	* Headers/cairo/CairoGState.h,
	* Source/cairo/CairoGState.m (-setSize:, -showPage): Add methods.
	* Source/cairo/CairoContext.m (-beginPrologueBBox:...title:,
	-showPage): New methods.
	* Source/cairo/CairoGState.m (-GSShowGlyphs::): Handle rotated
	text correctly.

2007-06-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/image.m (-DPSimage:): Replaced appendTransform: with
	prependTransform:. Undoes change from 2004-01-25.

2007-05-02  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GNUmakefile.postamble (after-clean): Remove
	$(BUNDLE_NAME)Info.plist on clean.

2007-04-27 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoSurface.h,
	* Source/cairo/CairoSurface.m: Remove default surface type setting.
	* Headers/cairo/XGCairoSurface.h: Remove includes.
	* Source/cairo/XGCairoSurface.m: Add includes.
	* Headers/cairo/XGCairoXImageSurface.h: Remove includes.
	* Source/cairo/XGCairoXImageSurface.m: Add includes, add  missing
	dealloc method.
	* Headers/cairo/CairoPSSurface.h,
	* Source/cairo/CairoPSSurface.m: New files.
	* Source/cairo/GNUmakefile: Add CairoPSSurface.